[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/title.png" type="Texture" id=2]

[node name="main" type="Control"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 90.0
margin_top = 60.0
margin_right = 1210.0
margin_bottom = 730.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
margin_left = 190.0
margin_right = 950.0
margin_bottom = 316.0
texture = ExtResource( 2 )

[node name="main_game" type="Button" parent="Panel"]
margin_left = 450.0
margin_top = 360.0
margin_right = 690.0
margin_bottom = 400.0
text = "Main Game"

[node name="tutorial" type="Button" parent="Panel"]
margin_left = 450.0
margin_top = 450.0
margin_right = 690.0
margin_bottom = 490.0
text = "Tutorial"
[connection signal="pressed" from="Panel/main_game" to="." method="_on_main_game_pressed"]
[connection signal="toggled" from="Panel/tutorial" to="." method="_on_tutorial_toggled"]
